[package]
name = "check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
md5 = "0.8.0"
sha2 = "0.10.9"
infer = "0.19.0"
glob = "0.3.1"
charset-normalizer-rs = "=1.1.0"

[dev-dependencies]
tempfile = "3.23.0"
